Describe auth API
